@@ -49,6 +49,9 @@ Shipment:
 Wanted changes:
 ===============
 
+ * creating of repositories on branching has changed if repositories of the
+   source refer each other. This gets recreated in new project.
+
  * project copy is not adding the user anymore
 
  * service dispatcher is used by default now
